blog page completed

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,39 @@ body{
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.pagination{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  margin: 10px;
+  padding: 10px;
+}
+
+.pagination li{
+  margin: 0 5px;
+}
+
+.pagination a{
+  display: inline-block;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  text-decoration: none;
+  color: #000;
+}
+
+.pagination a:hover{
+  background-color: #eee;
+}
+
+.pagination li.activePagination{
+  background: rgb(255, 106, 0);
+  border-radius: 4px;
+  color: #ffff;
+}
+
+.active-button{
+  color: #fc3c1a;
+}
